{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 295,
  "lineage": "e4e66c5f-6a9e-9182-40f9-74494b08b3ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddbdea833a8d2f0d",
            "arn": "arn:aws:ec2:us-east-1:949157020044:instance/i-037cf05365bfe6aeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037cf05365bfe6aeb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default.deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071a2548e16b42df4",
            "private_dns": "ip-172-31-17-4.ec2.internal",
            "private_ip": "172.31.17.4",
            "public_dns": "ec2-54-236-29-215.compute-1.amazonaws.com",
            "public_ip": "54.236.29.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001a4bd6fa92291a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Standard-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062144303c7480e80",
            "tags": {
              "Name": "ClientServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e44d2bfded2f07a3"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "data.aws_ami.ubuntu",
            "tls_private_key.private-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "student-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949157020044:security-group/sg-0e44d2bfded2f07a3",
            "description": "Student security group",
            "egress": [],
            "id": "sg-0e44d2bfded2f07a3",
            "ingress": [],
            "name": "Standard-SG",
            "name_prefix": "",
            "owner_id": "949157020044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "Name": "Standard-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-074e6693bac7da2d4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1471390747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e44d2bfded2f07a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4001621945",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e44d2bfded2f07a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create-sgr-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1295471443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e44d2bfded2f07a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.student-sg"
          ]
        }
      ]
    }
  ]
}